<resources>
    <!-- Other string resources-->
    <string name="app_name">GitHubUserApp</string>

    <string name="list_username">Username</string>
    <string name="list_name">Name</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Location: Pittsburgh, PA, USA</item>
        <item>Location: New Delhi, India</item>
        <item>Location: California</item>
        <item>Location: Sydney, Australia</item>
        <item>Location: Trondheim, Norway</item>
        <item>Location: India</item>
        <item>Location: Kotagede, Yogyakarta, Indonesia</item>
        <item>Location: Jakarta, Indonesia</item>
        <item>Location: Bojongsoang - Bandung Jawa Barat</item>
        <item>Location: Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>Repository: 102</item>
        <item>Repository: 37</item>
        <item>Repository: 9</item>
        <item>Repository: 30</item>
        <item>Repository: 56</item>
        <item>Repository: 28</item>
        <item>Repository: 44</item>
        <item>Repository: 110</item>
        <item>Repository: 1064</item>
        <item>Repository: 65</item>
    </string-array>

    <string-array name="company">
        <item>Company: Google, Inc.</item>
        <item>Company: MindOrksOpenSource</item>
        <item>Company: Google</item>
        <item>Company: Google working on @android</item>
        <item>Company: Working Group Two</item>
        <item>Company: AndroidHive | Droid5</item>
        <item>Company: gojek-engineering</item>
        <item>Company: KotlinID</item>
        <item>Company: JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Company: Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>Followers: 56995</item>
        <item>Followers: 5153</item>
        <item>Followers: 7972</item>
        <item>Followers: 14725</item>
        <item>Followers: 788</item>
        <item>Followers: 18628</item>
        <item>Followers: 277</item>
        <item>Followers: 4525</item>
        <item>Followers: 428</item>
        <item>Followers: 465</item>
    </string-array>

    <string-array name="following">
        <item>Following: 12</item>
        <item>Following: 2</item>
        <item>Following: 0</item>
        <item>Following: 1</item>
        <item>Following: 0</item>
        <item>Following: 3</item>
        <item>Following: 39</item>
        <item>Following: 23</item>
        <item>Following: 61</item>
        <item>Following: 10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>

    <string name="search_username">Search Username</string>
    <string name="status_info">Click and Type to Search Users</string>
    <string name="searching_status_info">Searching…</string>
    <string name="instruction_status_info">Click and Type to Search Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="search">Search</string>
    <string name="search2">Search...</string>

</resources>


