<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity"
    android:id="@+id/detail_user">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="143dp"
            android:layout_marginEnd="146dp"
            android:rotationY="-4"
            app:siBorderColor="@android:color/holo_blue_dark"
            app:siBorderWidth="6dp"
            tools:src="@android:color/background_dark" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-black"
            tools:text="@string/list_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_usermane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="serif"
            tools:text="@string/list_username"
            android:textSize="12sp"
            android:textStyle="italic" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/follow_container"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="sans-serif"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="@string/followers" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/txt_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="sans-serif"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="@string/repository" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:id="@+id/txt_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="sans-serif"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="@string/following" />
                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/follow_container">

        <TableRow
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="left"
            android:paddingTop="0px">

            <TextView
                android:id="@+id/txt_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="@string/company" />

        </TableRow>

        <TableRow
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="left"
            android:paddingTop="0px">

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="@string/location" />
        </TableRow>

    </TableLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:minHeight="?actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />




</androidx.constraintlayout.widget.ConstraintLayout>